# ChironDX

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: msbuild.yml  prTasks.yml
Chiron/: CMakeLists.txt  Chiron.sln
Chiron/CMake/: Default.cmake  Utils.cmake
Chiron/ChironEngine/: CMakeLists.txt  ChironEngine.h  ChironEngine.vcxproj  ChironEngine.vcxproj.filters
Chiron/ChironEngine/Source/: Application.cpp  Application.h  Core.h  EntryPoint.h  Main.cpp  Pch.h
Chiron/ChironEngine/Source/Auxiliar/: Formatter.cpp  Formatter.h  Utils.cpp
Chiron/ChironEngine/Source/ChironClasses/: ChironLog.cpp  ChironLog.h  Log.cpp  Log.h
Chiron/ChironEngine/Source/DataModels/Program/: Program.cpp
Chiron/ChironEngine/Source/Enums/: ModuleType.h
Chiron/ChironEngine/Source/Events/: Event.cpp  Event.h
Chiron/ChironEngine/Source/Events/ApplicationEvent/: ApplicationEvent.cpp  ApplicationEvent.h
Chiron/ChironEngine/Source/Events/KeyEvents/: KeyEvent.cpp  KeyEvent.h  KeyHoldedEvent.cpp  KeyHoldedEvent.h  KeyPressedEvent.cpp  KeyPressedEvent.h  KeyReleasedEvent.cpp  KeyReleasedEvent.h
Chiron/ChironEngine/Source/Events/MouseEvents/: MouseEvent.cpp  MouseEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  MousePressedEvent.cpp  MousePressedEvent.h  MouseReleasedEvent.cpp  MouseReleasedEvent.h  MouseScrollEvent.cpp  MouseScrollEvent.h
Chiron/ChironEngine/Source/Events/WindowEvents/: WindowBorderlessEvent.cpp  WindowBorderlessEvent.h  WindowCloseEvent.cpp  WindowCloseEvent.h  WindowEvent.cpp  WindowEvent.h  WindowFullScreenEvent.cpp  WindowFullScreenEvent.h  WindowMovedEvent.cpp  WindowMovedEvent.h  WindowResizedEvent.cpp  WindowResizedEvent.h
Chiron/ChironEngine/Source/Modules/: Module.h  ModuleID3D12.cpp  ModuleInput.cpp  ModuleInput.h  ModuleProgram.cpp  ModuleRender.cpp  ModuleRender.h  ModuleWindow.cpp  ModuleWindow.h
Chiron/DirectXTK12/Src/Shaders/Compiled/: AlphaTestEffect_PSAlphaTestEqNe.inc  AlphaTestEffect_PSAlphaTestEqNeNoFog.inc  AlphaTestEffect_PSAlphaTestLtGt.inc  AlphaTestEffect_PSAlphaTestLtGtNoFog.inc  AlphaTestEffect_VSAlphaTest.inc  AlphaTestEffect_VSAlphaTestVc.inc  BasicEffect_PSBasicNoFog.inc  BasicEffect_PSBasicPixelLightingTx.inc  BasicEffect_PSBasicTx.inc  BasicEffect_PSBasicTxNoFog.inc  BasicEffect_PSBasicVertexLighting.inc  BasicEffect_PSBasicVertexLightingNoFog.inc  BasicEffect_PSBasicVertexLightingTx.inc  BasicEffect_PSBasicVertexLightingTxNoFog.inc  BasicEffect_VSBasicPixelLightingTxVcBn.inc  BasicEffect_VSBasicPixelLightingVc.inc  BasicEffect_VSBasicTx.inc  BasicEffect_VSBasicTxVc.inc  BasicEffect_VSBasicTxVcNoFog.inc  BasicEffect_VSBasicVcNoFog.inc  BasicEffect_VSBasicVertexLighting.inc  BasicEffect_VSBasicVertexLightingBn.inc  BasicEffect_VSBasicVertexLightingTxBn.inc  BasicEffect_VSBasicVertexLightingVc.inc  BasicEffect_VSBasicVertexLightingVcBn.inc  DebugEffect_PSRGBNormals.inc  DebugEffect_PSRGBTangents.inc  DebugEffect_VSDebugBn.inc  DebugEffect_VSDebugVcBn.inc  DualTextureEffect_VSDualTexture.inc  EnvironmentMapEffect_PSEnvMap.inc  EnvironmentMapEffect_PSEnvMapDualParabolaPixelLighting.inc  EnvironmentMapEffect_PSEnvMapDualParabolaPixelLightingFresnel.inc  EnvironmentMapEffect_PSEnvMapDualParabolaPixelLightingFresnelNoFog.inc  EnvironmentMapEffect_PSEnvMapNoFog.inc  EnvironmentMapEffect_PSEnvMapPixelLighting.inc  EnvironmentMapEffect_PSEnvMapPixelLightingNoFog.inc  EnvironmentMapEffect_PSEnvMapSpherePixelLightingFresnel.inc  EnvironmentMapEffect_VSEnvMap.inc  EnvironmentMapEffect_VSEnvMapBn.inc  (+34 more)
Chiron/ExternalDependencies/: CMakeLists.txt  ExternalDependencies.vcxproj  ExternalDependencies.vcxproj.filters
Chiron/ExternalDependencies/spdlog/include/spdlog/fmt/bundled/: format.h
Chiron/Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  SandboxApp.cpp
Chiron/Sandbox/Source/: SandboxApp.cpp
ChironDX/ChironEngine/Source/: Application.h
ChironDX/ChironEngine/Source/Modules/: Module.h  ModuleProgram.h
ChironDX/DirectXTK12/: DirectXTK_Desktop_2022_Win10.vcxproj
ChironDX/ExternalDependencies/: ExternalDependencies.vcxproj.filters
ChironEngine/: ChironEngine.cpp  ChironEngine.sln  ChironEngine.vcxproj
ExternalDependencies/: ExternalDependencies.vcxproj  ExternalDependencies.vcxproj.filters
Game/: imgui.ini
Game/Shaders/: default.hlsl  default_pixel.hlsl  generate_mips_cs.hlsli
Source/: ChironDX.sln  ChironEngine.cpp  ChironEngine.sln  ChironEngine.vcxproj  ChironEngine.vcxproj.filters  StdAfx.h  main.cpp
Source/Auxiliar/: Formatter.cpp
Source/ChironClasses/: ChironLog.cpp  ChironLog.h
Source/ChironEngine/: ChironEngine.vcxproj  ChironEngine.vcxproj.filters
Source/ChironEngine/Source/: Application.cpp  Application.h  DebugDrawPass.cpp  DebugDrawPass.h  Globals.h  Main.cpp  Pch.h  debug_draw.hpp
Source/ChironEngine/Source/Auxiliar/: ChironTodo.h  Formatter.cpp  Formatter.h  Log.cpp  Log.h  Utils.cpp  Utils.h
Source/ChironEngine/Source/Defines/: FileSystemDefine.h
Source/ChironEngine/Source/Enums/: ComponentType.h  ModuleType.h  UpdateStatus.h
Source/ChironEngine/Source/Modules/: Module.h  ModuleCamera.cpp  ModuleCamera.h  ModuleEditor.cpp  ModuleEditor.h  ModuleFileSystem.cpp  ModuleFileSystem.h  ModuleID3D12.cpp  ModuleID3D12.h  ModuleInput.cpp  ModuleInput.h  ModuleProgram.cpp  ModuleProgram.h  ModuleRender.cpp  ModuleRender.h  ModuleScene.cpp  ModuleScene.h  ModuleWindow.cpp  ModuleWindow.h
Source/ChironEngine/Source/StdSpecialization/: HashSpecialization.h
Source/ChironEngine/Source/Structs/: MVPStruct.h  ModelAttributes.h  ThemeColors.h  ViewProjection.h
Source/DirectXTK12/: DirectXTK_Desktop_2022_Win10.vcxproj
Source/DirectXTK12/Inc/: SimpleMath.h  SimpleMath.inl
Source/DirectXTex/: DirectXTex_Desktop_2022.vcxproj
Source/ExternalDependencies/: ExternalDependencies.vcxproj  ExternalDependencies.vcxproj.filters
Source/ExternalDependencies/ImGui/: imgui.cpp  imgui.h  imgui_bezier.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
(+182 files in other folders)
